--- a/frontend/market-maven/src/styles.css
+++ b/frontend/market-maven/src/styles.css
@@ -13,7 +13,7 @@ body {
 }
 
 .Landing-Page{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5)) ,url("C:\Users\jdhan\Documents\MarketMaven\Market-Maven\frontend\market-maven\public\anastasia-saldatava-5feMqpVOc-s-unsplash.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5)) ,url("..\\..\\market-maven\\public\\anastasia-saldatava-5feMqpVOc-s-unsplash.jpg");
     background-size: cover;
     background-position: center;
     padding-left: 1rem;
@@ -27,12 +27,10 @@ h1 {
     font-weight: 200;
     font-size: 5rem;
     color: white;
-    font-family: "Inter", sans-serif;
-    font-optical-sizing: auto;
-    font-style: normal;
+    
 }
 
-.NavBar {
+.Header {
     background-color: white;
     color:rgb(67,42,54);
     display: flex;
@@ -51,29 +49,29 @@ h1 {
 .site-title{
     font-size: 1.5rem;
 }
-.NavBar ul {
+.Header ul {
     padding: 3px;
     margin: 0;
     list-style: none;
     display: flex;
     gap: 1rem;
 }
-.NavBar li {
+.Header li {
     padding: 3px;
 }
-.NavBar li.active{
+.Header li.active{
     background-color: rgb(146, 120, 120);
     color: white;
     border-radius: 10px;
     padding: 3px;
 }
-.NavBar li:hover{
+.Header li:hover{
     background-color: rgb(42, 172, 135);
     border-radius: 10px;
     padding: 3px;
 }
 
-.NavBar a {
+.Header a {
     color: inherit;
     text-decoration: none;
     height: 100%;
