--- a/frontend/market-maven/src/styles.css
+++ b/frontend/market-maven/src/styles.css
@@ -19,13 +19,14 @@ body {
     padding-left: 1rem;
     height: 100vh;
     display: flex;
+
     align-items: flex-end; /* Add this line */
     justify-content: flex-start; /* Add this line */
     padding-bottom: 2rem; /* Add this line */
 }
 
 h1 {
-    text-align: left;
+    text-align: left; 
     vertical-align: center;
     font-weight: 200;
     font-size: 3rem; /* Adjust the font size as desired */
@@ -36,7 +37,7 @@ h1 {
     margin-bottom: 0;
 }
 
-.Header {
+.Navbar {
     background-color: white;
     color:rgb(67,42,54);
     display: flex;
@@ -55,17 +56,17 @@ h1 {
 .site-title{
     font-size: 1.5rem;
 }
-.Header ul {
+.Navbar ul {
     padding: 3px;
     margin: 0;
     list-style: none;
     display: flex;
     gap: 1rem;
 }
-.Header li {
+.Navbar li {
     padding: 3px;
 }
-.Header li.active{
+.Navbar li.active{
     background-color: rgb(146, 120, 120);
     color: white;
     border-radius: 10px;
@@ -77,7 +78,7 @@ h1 {
     padding: 3px;
 }
 
-.Header a {
+.Navbar a {
     color: inherit;
     text-decoration: none;
     height: 100%;
