--- a/frontend/market-maven/src/styles.css
+++ b/frontend/market-maven/src/styles.css
@@ -72,7 +72,7 @@ h1 {
     border-radius: 10px;
     padding: 3px;
 }
-.NavBar li:hover{
+.Navbar li:hover{
     background-color: rgb(146, 120, 120);
     border-radius: 10px;
     padding: 3px;
