--- a/frontend/market-maven/src/styles.css
+++ b/frontend/market-maven/src/styles.css
@@ -17,7 +17,7 @@ body {
 }
 
 .Landing-Page.Landing-Page {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5)) ,url("..\\..\\market-maven\\public\\anastasia-saldatava-5feMqpVOc-s-unsplash.jpg") !important;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5)) ,url(./pages/anastasia-saldatava-5feMqpVOc-s-unsplash.jpg) !important;
     background-size: cover !important;
     background-position: center !important;
     padding-left: 1rem;
