--- a/frontend/market-maven/src/styles.css
+++ b/frontend/market-maven/src/styles.css
@@ -1,41 +1,41 @@
 *{
-    box-sizing: border-box !important;
+    box-sizing: border-box  ;
 }
 
 body {
-    margin: 0 !important;
-    border: 0 !important;
-    padding: 0 !important;
-    background-color: rgb(146, 120, 120) !important;
+    margin: 0  ;
+    border: 0  ;
+    padding: 0  ;
+    background-color: rgb(146, 120, 120)  ;
     align-items: center;
     justify-content: center;
 }
 .container {
     text-align: center;
-    margin: 0 !important;
-    padding: 0 !important;
+    margin: 0  ;
+    padding: 0  ;
 }
 
-.Landing-Page.Landing-Page {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5)) ,url("..\\..\\market-maven\\public\\anastasia-saldatava-5feMqpVOc-s-unsplash.jpg") !important;
-    background-size: cover !important;
-    background-position: center !important;
+.Landing-Page {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5)) ,url("..\\..\\market-maven\\public\\anastasia-saldatava-5feMqpVOc-s-unsplash.jpg")  ;
+    background-size: cover  ;
+    background-position: center  ;
     padding-left: 1rem;
     height: 100vh;
-    display: flex !important;
+    display: flex  ;
 
     align-items: flex-end; /* Add this line */
-    justify-content: flex-start !important; /* Add this line */
+    justify-content: flex-start  ; /* Add this line */
     padding-bottom: 2rem; /* Add this line */
 }
 
 h1 {
     text-align: left; 
-    vertical-align: center !important;
-    font-weight: 200 !important;
+    vertical-align: center  ;
+    font-weight: 200  ;
     font-size: 3rem; /* Adjust the font size as desired */
     color: white;
-    font-family: "Inter", sans-serif !important;
+    font-family: "Inter", sans-serif  ;
     font-optical-sizing: auto;
     font-style: normal;
     margin-bottom: 0;
