--- a/frontend/market-maven/src/pages/login.css
+++ b/frontend/market-maven/src/pages/login.css
@@ -12,9 +12,8 @@
 
 }
 
-
-.flex {
-    display: flex; 
+.bg-login-button {
+    background-color: #472836;
 }
 
 
@@ -27,7 +26,7 @@
     width: 50vw;
 }
 
-.border {
+/* .border {
     border: 1px solid;
 }
 
@@ -79,10 +78,6 @@
     background-color: rgba(0, 0, 0, 0);
 }
 
-.bg-login-button {
-    background-color: #472836;
-}
-
 .text-white {
     color: white;
 }
@@ -129,4 +124,4 @@
 
 .items-center {
     align-items: center;
-}
+} */
