--- a/frontend/market-maven/src/Components/Navbar.css
+++ b/frontend/market-maven/src/Components/Navbar.css
@@ -28,16 +28,16 @@
     padding: 16px;
 }
 .Navbar li.active{
-    background-color: rgb(146, 120, 120);
-    color: white;
+    /* background-color: rgb(146, 120, 120);
+    color: white; */
     border-radius: 10px;
-    padding: 3px;
+    /* padding: 3px; */
 }
 .Navbar li:hover{
-    background-color: rgb(146, 120, 120);
-    color: white !important;
+    /* background-color: rgb(146, 120, 120);
+    color: white !important; */
     border-radius: 10px;
-    padding: 3px;
+    /* padding: 3px; */
     text-decoration: none !important;
 }
 
