--- a/frontend/market-maven/src/styles.css
+++ b/frontend/market-maven/src/styles.css
@@ -6,7 +6,7 @@ body {
     margin: 0  ;
     border: 0  ;
     padding: 0  ;
-    background-color: rgb(146, 120, 120)  ;
+    background-color: white;
     align-items: center;
     justify-content: center;
 }
