--- a/frontend/market-maven/src/pages/chat.css
+++ b/frontend/market-maven/src/pages/chat.css
@@ -5,13 +5,13 @@ html,body {
   height: 100%;
 } */
 
-/* #root {
+chat-main {
   background-color: #f0f0f0;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100%;
-} */
+}
 
 .__main {
   max-width: 0%;
