--- a/frontend/market-maven/src/Components/chatBody.css
+++ b/frontend/market-maven/src/Components/chatBody.css
@@ -4,4 +4,18 @@
     border-radius: 10px;
     padding: 15px 20px;
     display: flex;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+
 }
+/*
+{
+  background-color: #f0f0f0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+*/
